--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "nd-job-lookup-gem"]
 	path = nd-job-lookup-gem
 	url = git@bitbucket.org:nd-oit/nd-job-lookup-gem.git
+[submodule "nd-faculty-api-ws"]
+	path = nd-faculty-api-ws
+	url = git@bitbucket.org:nd-oit/nd-faculty-api-ws.git
