--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,24 @@
 [submodule "upstream-rubygems"]
 	path = upstream-rubygems
 	url = git@github.com:ndoit/upstream-rubygems.git
+[submodule "facilities-api"]
+	path = facilities-api
+	url = git@bitbucket.org:nd-oit/nd_facilities_api.git
+[submodule "faculty-api"]
+	path = faculty-api
+	url = git@bitbucket.org:nd-oit/nd-faculty-api-ws.git
+[submodule "finance-api"]
+	path = finance-api
+	url = git@bitbucket.org:nd-oit/nd_finance_api_internal.git
+[submodule "person-api"]
+	path = person-api
+	url = git@bitbucket.org:nd-oit/nd-person-api-ws.git
+[submodule "hrpy-api"]
+	path = hrpy-api
+	url = git@bitbucket.org:nd-oit/nd_hrpy_api_internal.git
+[submodule "nd-employee-lookup-example"]
+	path = nd-employee-lookup-example
+	url = git@bitbucket.org:nd-oit/nd_employee_lookup_example.git
+[submodule "nd-foapal-gem"]
+	path = nd-foapal-gem
+	url = git@bitbucket.org:nd-oit/nd_foapal_gem.git
